# logistics_flow

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  environment.py  grade_tasks.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  task_scenarios.json
server/: app.py
